# rust-axum-postgres

./: Cargo.toml  Dockerfile  README.md
config/: default.toml
migrations/: 0000_create_schema.sql  0001_insert_initial.sql
src/: main.rs
src/controller/: book_controller.rs  mod.rs
src/model/: api.rs  mod.rs  row.rs  service_config.rs  service_state.rs
src/service/: book_service.rs  error.rs  mod.rs
