[package]
name = "rust-axum-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["compression-full"] }
axum = { version = "0.7", features = ["default"] }

sqlx = { version = "0.7", features = ["macros", "runtime-tokio", "postgres"] }
sea-query = "0.31"
sea-query-binder = {version = "0.6", features = ["sqlx-postgres"]}

serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-logstash = "0.7"

config = "0.14"

strum = "0.26"
strum_macros = "0.26"
